data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1759.wast
;; 10. **Test Description: Interleaved Concurrent Control Structures**    - **Reasoning**: Interleaved `block`, `loop`, and `if` structures with conditional branches that expect specific stack states.    - **Constraint Checked**: Context maintenance and consistency across interleaved control structures.    - **Inconsistent CFG**: The CFG creates invalid paths through control structures due to improper context switching.    - **Expected Differential Behavior**: WASM detects a generic error in control flow, whereas wizard_engine identifies specific variances with `OobLabel` or `EmptyValueStackExpecting` errors.

(assert_invalid
  (module
    (func $interleaved-structures
      (block
        (loop
          (block
            (i32.const 1)
            (br_if 1 (i32.const 0))
          )
          (if (i32.const 1)
            (then (br_if 2 (i32.const 1)))
          )
        )
      )
    )
  )
  "OobLabel or EmptyValueStackExpecting"
)